--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,25 @@ classifiers = [
     "Topic :: Utilities",
     "Typing :: Typed",
 ]
-dependencies = []
+dependencies = [
+    "torch==1.13.1+cu117",
+    "whisperx @ git+https://github.com/m-bain/whisperx.git",
+    "click>=8.1.3",
+    "openai>=0.27.4",
+    "tiktoken>=0.3.1",
+    "whisper>=1.1.10",
+    "backoff>=2.2.1",
+    "ratelimit>=2.2.1",
+    "reretry>=0.11.8",
+    "pytube>=12.1.3",
+]
 
 [tool.pdm]
 version = {source = "scm"}
+
+[[tool.pdm.source]]
+url = "https://download.pytorch.org/whl/cu117"
+name = "torch"
 
 [tool.pdm.build]
 package-dir = "src"
